choose and build layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
 </head>
 
 <body>
+    <div id="leftSide">
+        <!-- <span> -->
+        <p class="h1">Player One</p>
+        <p id="player1">0</p>
+        <!-- </span> -->
+    </div>
 
+    <div id="rightSide">
+        <!-- <span> -->
+        <p class="h1">Player Two</p>
+        <p id="player2">0</p>
+        <!-- </span> -->
+    </div>
     <script src="app.js"></script>
 </body>
 
