--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Score Keeper</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -27,6 +27,34 @@
         <p id="player2">0</p>
         <!-- </span> -->
     </div>
+
+    <span id="btnwrapper">
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                winning score
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item">1</a></li>
+                <li><a class="dropdown-item">2</a></li>
+                <li><a class="dropdown-item">3</a></li>
+                <li><a class="dropdown-item">4</a></li>
+                <li><a class="dropdown-item">5</a></li>
+                <li><a class="dropdown-item">6</a></li>
+                <li><a class="dropdown-item">7</a></li>
+            </ul>
+        </div>
+
+        <div id="btns">
+            <button>+1 Player One</button>
+            <button>Reset</button>
+            <button>+1 Player Two</button>
+        </div>
+    </span>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 
