--- a/index.html
+++ b/index.html
@@ -29,21 +29,16 @@
     </div>
 
     <span id="btnwrapper">
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                winning score
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item">1</a></li>
-                <li><a class="dropdown-item">2</a></li>
-                <li><a class="dropdown-item">3</a></li>
-                <li><a class="dropdown-item">4</a></li>
-                <li><a class="dropdown-item">5</a></li>
-                <li><a class="dropdown-item">6</a></li>
-                <li><a class="dropdown-item">7</a></li>
-            </ul>
-        </div>
+        <select class="form-select" aria-label="Default select example">
+            <option selected>Select winning score</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+            <option value="4">Four</option>
+            <option value="5">Five</option>
+            <option value="6">Six</option>
+            <option value="7">Seven</option>
+        </select>
 
         <div id="btns">
             <button>+1 Player One</button>
