add function to score buttons

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </select>
 
         <div id="btns">
-            <button>+1 Player One</button>
+            <button id="pointPOne">+1 Player One</button>
             <button>Reset</button>
-            <button>+1 Player Two</button>
+            <button id="pointPTwo">+1 Player Two</button>
         </div>
     </span>
     <!-- JavaScript Bundle with Popper -->
