--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <span id="btnwrapper">
         <select class="form-select" aria-label="Default select example">
             <option selected>Select winning score</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
             <option value="3">Three</option>
             <option value="4">Four</option>
             <option value="5">Five</option>
             <option value="6">Six</option>
             <option value="7">Seven</option>
+            <option value="8">Eight</option>
+            <option value="9">Nine</option>
         </select>
 
         <div id="btns">
