add id for reset button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div id="btns">
             <button id="pointPOne">+1 Player One</button>
-            <button>Reset</button>
+            <button id="resetBtn">Reset</button>
             <button id="pointPTwo">+1 Player Two</button>
         </div>
     </span>
